WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137691
[Win32] Thunk is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=137691
Summary
[Win32] Thunk is not implemented.
peavo
Reported
2014-10-14 06:56:58 PDT
Thunks for functions with double operands (floor, etc.) are not implemented on Win32.
Attachments
Patch
(2.05 KB, patch)
2014-10-14 06:59 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-10-14 06:59:50 PDT
Created
attachment 239797
[details]
Patch
Mark Lam
Comment 2
2014-10-14 08:47:40 PDT
Comment on
attachment 239797
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-10-14 09:25:27 PDT
Comment on
attachment 239797
[details]
Patch Clearing flags on attachment: 239797 Committed
r174682
: <
http://trac.webkit.org/changeset/174682
>
WebKit Commit Bot
Comment 4
2014-10-14 09:25:29 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 5
2014-10-14 10:29:04 PDT
(In reply to
comment #2
)
> (From update of
attachment 239797
[details]
) > r=me
Thanks!
Konstantin Tokarev
Comment 6
2016-03-16 05:13:32 PDT
Comment on
attachment 239797
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=239797&action=review
> Source/JavaScriptCore/jit/ThunkGenerators.cpp:813 > +// MSVC does not accept floor, etc, to be called directly from inline assembly, so we need to wrap these functions.
Is it still true for VS2015?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug