[Win32] Thunk is not implemented. https://bugs.webkit.org/show_bug.cgi?id=137691

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-10-14
Reviewed by Mark Lam.

Thunks for functions with double operands (floor, etc.) are not implemented on Win32.

* jit/ThunkGenerators.cpp:

Canonical link: https://commits.webkit.org/155543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174682 268f45cc-cd09-0410-ab3c-d52691b4dbfc